--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </div> 
  
-    <footer class="sticky-footer"><p>&copy by  Aisha,Sham und Sprotte 2021 <a href="https://www.bitchute.com/channel/Dx5WN5nR5jHZ/">Toube</a></p>
+    <footer class="sticky-footer"><p>&copy by  Aisha,Sham und Sprotte 2021 <a href="https://www.geo.de/reisen/reiseziele/14791-thma-italien-reisefuehrer">Die besten Tipps für Urlaub in Bella Italia! </a></p>
     </footer> 
   </body>
 </html>
