--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/index.jpeg" class="d-block w-100" alt="...">
+          <img src="./img/antikeperle.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./img/index1.jpeg" class="d-block w-100" alt="...">
+          <img src="./img/Küste.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="./img/index3.jpeg" class="d-block w-100" alt="...">
+          <img src="./img/Sizilin1.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
