--- a/index.html
+++ b/index.html
@@ -8,37 +8,103 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Reiseführer_Italien</title>
-  </head>
-  <body>
+         <title>Reiseführer_Italien</title>
+       </head>
+    <body>
 <header>
-
-    <h1>Reiseführer_Italien</h1>
-
+  <!-- ---navbar -->
+    <div class="sticky-top bg-light p-2 shadow" style="--bs-bg-opacity:0.95"> 
+      <nav class="navbar navbar-expand-lg navbar-light  container" >
+          <div class="container-fluid">
+            <a class="navbar-brand fs-3" href="#">Reiseführer-Italien</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+               </button>
+                <div class="collapse navbar-collapse" id="navbarColor03">
+                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link text-dark" href="#">Piemont</a>
+                 </li>
+                 <li class="nav-item">
+                  <a class="nav-link text-dark" href="#">Rom</a>
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-primary  bg-primary  text-white" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <!-- überschrift,text und foto in erste Site -->
+       <div class="py-4">
+           <section class="container">
+           <div class="row align-items-center">
+            <div class="col-md-6">
+                <h2 class="display-4 mb-4">Von einem, der auszog<span class="text-warning"> die Welt </span> zu entdecken!</h2>
+                <p class="lead text-muted mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus corporis quas minima est, animi facilis aperiam nisi officiis veniam repudiandae accusamus iusto, impedit eius vel? Maiores incidunt officia amet maxime.</p>
+                <a href="#" class="btn btn-primary">Get Started</a>
+            </div>
+            <div class="col-md-6">
+                <img src="img/Trip-cuate (1).png" class="img-fluid">
+            </div>
+           </div>
+          </section>
+       </div>
 </header>
+<main>
+           <h2 class="text-center m-4 fs-1  bg-warning opacity-75">Schöne fotos von meiner reise nach Italian</h2>
+               <div class="container-fluid  d-flex flex-wrap align-items-center m-2"    
+                  <div class="row ">
+                     <div class="col ">
+                           <img src="img/italian-1.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+                             </div>
+                                  <div class="col ">
+                                     <img src="img/italian-2.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+                                     </div>
+                                  <div class="col">
+                                 <img src="img/italian-3.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+                              </div>
+                            </div>
+                    <div class="row">
+                            <div class="col g-4">
+                               <img src="img/italian-4.jpg" class="rounded float-end  " style="width: 500px; height: 450px;" alt="...">
+                                    </div>
+                                       <div class="col g-4">
+                                         <img src="img/italian-5.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+                                     </div>
+                                  <div class="col g-4">
+                              <img src="img/italian-6.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+                        </div>
+                    </div>
+               </main>
 
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+   
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-
+  
     <!--Karusell-->
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <!-- <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel"> 
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./img/index.jpeg" class="d-block w-100" alt="...">
+          <img src="img/italian-5.jpg" class="d-block w-100 h-300px" alt="Bild aus italian">
         </div>
         <div class="carousel-item">
-          <img src="./img/index1.jpeg" class="d-block w-100" alt="...">
+          <img src="img/italian-3.jpg" class="d-block w-100  h-300px" alt="Bild aus italian">
         </div>
         <div class="carousel-item">
-          <img src="./img/index3.jpeg" class="d-block w-100" alt="...">
+          <img src="img/italian-4.jpg" class="d-block w-100  h-300px" alt="Bild aus italian">
+        </div>
+        <div class="carousel-item">
+          <img src="img/italian-2.jpg" class="d-block w-100 h-300px" alt="Bild aus italian">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -48,10 +114,17 @@
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+      </button> -->
+   
+    
  
     <footer class="sticky-footer"><p>&copy by  Aisha,Sham und Sprotte 2021 <a href="https://www.geo.de/reisen/reiseziele/14791-thma-italien-reisefuehrer">Die besten Tipps für Urlaub in Bella Italia! </a></p>
     </footer> 
+
+     <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
   </body>
 </html>
