--- a/rom.html
+++ b/rom.html
@@ -16,44 +16,33 @@
   <body>
 
 <header>
-    <h1>Städtetrip nach Rom</h1>
-<!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Piemont</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
+    <h1 class="überschrift">Städtetrip nach Rom</h1>
+    <div class="sticky-top bg-light p-2 shadow" style="--bs-bg-opacity:0.95"> 
+      <nav class="navbar navbar-expand-lg navbar-light  container" >
+          <div class="container-fluid">
+            <a class="navbar-brand fs-3" href="#">Reiseführer-Italien</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+               </button>
+                <div class="collapse navbar-collapse" id="navbarColor03">
+                     <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                  <a class="nav-link text-dark" href="#">Piemont</a>
+                 </li>
+                 <li class="nav-item">
+                  <a class="nav-link text-dark" href="#">Rom</a>
+                </li>
+              </ul>
+              <form class="d-flex">
+                <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-primary  bg-primary  text-white" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
 
 </header>
 
@@ -62,6 +51,7 @@
 <img src="./img/petersdom_rom.jpg" class="rounded float-end m-2"  alt="petersdom">
 <img src="./img/sixtinische-kapelle-rom.jpg" class="rounded float-end m-2"  alt="kapelle">
 <img src="./img/engelsburg_rom.jpg" class="rounded float-end m-2"  alt="engelsburg">
+<img src="./img/romanum.jpg" class="rounded float-end m-2"  alt="engelsburg">
 
 
 <!--Container mit Schrift-->
