--- a/Piemont.html
+++ b/Piemont.html
@@ -12,7 +12,7 @@
   </head>
 
   <header>
-    <h1 class="überschrift">Städtetrip nach Rom</h1>
+    <h1 class="überschrift">Städtetrip nach Norditalien</h1>
     <div class="sticky-top bg-light p-2 shadow" style="--bs-bg-opacity:0.95"> 
       <nav class="navbar navbar-expand-lg navbar-light  container" >
           <div class="container-fluid">
@@ -23,13 +23,13 @@
                 <div class="collapse navbar-collapse" id="navbarColor03">
                      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Piemont</a>
+                  <a class="nav-link text-dark" href="Piemont.html">Piemont</a>
                  </li>
                  <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Rom</a>
+                  <a class="nav-link text-dark" href="rom.html">Rom</a>
                 </li>
               </ul>
               <form class="d-flex">
