--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header>
   <!-- ---navbar -->
     <div class="sticky-top bg-light p-2 shadow" style="--bs-bg-opacity:0.95"> 
-      <nav class="navbar navbar-expand-lg navbar-light  container" >
+      <nav class="navbar navbar-expand-lg navbar-light  container">
           <div class="container-fluid">
             <a class="navbar-brand fs-3" href="#">Reiseführer-Italien</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,13 +23,13 @@
                 <div class="collapse navbar-collapse" id="navbarColor03">
                      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Piemont</a>
+                  <a class="nav-link text-dark" href="Piemont.html">Piemont</a>
                  </li>
                  <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Rom</a>
+                  <a class="nav-link text-dark" href="rom.html">Rom</a>
                 </li>
               </ul>
               <form class="d-flex">
