--- a/rom.html
+++ b/rom.html
@@ -16,6 +16,7 @@
   <body>
 
 <header>
+
     <h1 class="überschrift">Städtetrip nach Rom</h1>
     <div class="sticky-top bg-light p-2 shadow" style="--bs-bg-opacity:0.95"> 
       <nav class="navbar navbar-expand-lg navbar-light  container" >
@@ -27,13 +28,13 @@
                 <div class="collapse navbar-collapse" id="navbarColor03">
                      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Piemont</a>
+                  <a class="nav-link text-dark" href="Piemont.html">Piemont</a>
                  </li>
                  <li class="nav-item">
-                  <a class="nav-link text-dark" href="#">Rom</a>
+                  <a class="nav-link text-dark" href="rom.html">Rom</a>
                 </li>
               </ul>
               <form class="d-flex">
@@ -45,21 +46,21 @@
         </nav>
 
 </header>
-
+<main>
 <!--Bilder-->
-<img src="./img/kolosseum_rom.jpg" class="rounded float-start m-2" alt="kolosseum_rom">
-<img src="./img/petersdom_rom.jpg" class="rounded float-end m-2"  alt="petersdom">
-<img src="./img/sixtinische-kapelle-rom.jpg" class="rounded float-end m-2"  alt="kapelle">
-<img src="./img/engelsburg_rom.jpg" class="rounded float-end m-2"  alt="engelsburg">
-<img src="./img/romanum.jpg" class="rounded float-end m-2"  alt="engelsburg">
-
+<img src="./img/kolosseum_rom.jpg" class="rounded" alt="kolosseum_rom">
+<img src="./img/petersdom_rom.jpg" class="rounded"  alt="petersdom">
+<img src="./img/sixtinische-kapelle-rom.jpg" class="rounded"  alt="kapelle">
+<img src="./img/engelsburg_rom.jpg" class="rounded"  alt="engelsburg">
+<img src="./img/romanum.jpg" class="rounded"  alt="romanum">
+<img src="./img/brunnen_rom.jpg" class="rounded" alt="brunnen"
 
 <!--Container mit Schrift-->
 <div class="container-fluid">
     <!-- Content here -->
     <p class="-sm">Rom ist die Hauptstadt Italiens, die von 2,8 Millionen Einwohnern bewohnt wird: den Römern. Der Legende nach wurde Rom von dem Zwilling Remus und Romulus im Jahr 753 v. Chr. gegründet. Die Stadt am Fluss Tiber wurde auf sieben Hügeln angelegt, die Palatin, Aventin, Kapitol, Caelius, Esquilin, Quirinal und Viminal heißen. Vor allem der Bereich rund um Palatin und Kapitol entwickelten sich später zum Machtzentrum des riesigen Römischen Reiches. Sie finden hier denn auch viele Ausgrabungen und Ruinen im Forum Romanum an und im Kolosseum machen Sie sich eine gute Vorstellung davon, wie die Gladiatoren in diesem gigantischen römischen Amphitheater kämpfen mussten. Das Pantheon, heute eine Kirche, ist mit seinem auffälligen runden offenen Dach das am besten erhaltene Gebäude der römischen Epoche. Entlang der Via Appia reisen Sie auf einer der ältesten Straßen Roms in der Zeit zurück. Tatsächlich ist die Stadt Rom ein großes Freilichtmuseum, sodass es nicht verwunderlich ist, dass das komplette alte Stadtzentrum auf der UNESCO Welterbeliste steht. </p>
   </div>
-
+</main>
 <!--Footer-->
 <footer class="sticky-footer"><p>&copy by  Aisha,Sham und Sprotte 2021 <a href="https://www.geo.de/reisen/reiseziele/14791-thma-italien-reisefuehrer">Die besten Tipps für Urlaub in Bella Italia! </a></p>
 </footer> 
