--- a/rom.html
+++ b/rom.html
@@ -49,12 +49,29 @@
 </header>
 <main>
 <!--Bilder-->
-<img src="./img/kolosseum_rom.jpg" class="rounded" alt="kolosseum_rom">
-<img src="./img/petersdom_rom.jpg" class="rounded"  alt="petersdom">
-<img src="./img/sixtinische-kapelle-rom.jpg" class="rounded"  alt="kapelle">
-<img src="./img/engelsburg_rom.jpg" class="rounded"  alt="engelsburg">
-<img src="./img/romanum.jpg" class="rounded"  alt="romanum">
-<img src="./img/brunnen_rom.jpg" class="rounded" alt="brunnen"
+<div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2" > 
+  <div class="row ">
+     <div class="col ">
+           <img src="img/brunnen_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+             </div>
+                  <div class="col ">
+                     <img src="img/engelsburg_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+                     </div>
+                  <div class="col">
+                 <img src="img/kolosseum_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+              </div>
+            </div>
+    <div class="row">
+            <div class="col g-4">
+               <img src="img/sixtinische-kapelle-rom.jpg" class="rounded float-end  " style="width: 500px; height: 450px;" alt="...">
+                    </div>
+                       <div class="col g-4">
+                         <img src="img/petersdom_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+                     </div>
+                  <div class="col g-4">
+              <img src="img/romanum.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+        </div>
+    </div>
 
 <!--Container mit Schrift-->
 <div class="container-fluid">
