--- a/rom.html
+++ b/rom.html
@@ -48,7 +48,11 @@
 
 </header>
 <main>
-<!--Bilder-->
+<!--Amiemirter Balken-->
+<div class="progress">
+  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+</div>
+<!--Bilder Rom-->
 <div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2" > 
   <div class="row ">
      <div class="col ">
@@ -75,8 +79,9 @@
 
 <!--Container mit Schrift-->
 <div class="container-fluid">
+<br><h3>ROM</h3>    
     <!-- Content here -->
-    <p class="-sm">Rom ist die Hauptstadt Italiens, die von 2,8 Millionen Einwohnern bewohnt wird: den Römern. Der Legende nach wurde Rom von dem Zwilling Remus und Romulus im Jahr 753 v. Chr. gegründet. Die Stadt am Fluss Tiber wurde auf sieben Hügeln angelegt, die Palatin, Aventin, Kapitol, Caelius, Esquilin, Quirinal und Viminal heißen. Vor allem der Bereich rund um Palatin und Kapitol entwickelten sich später zum Machtzentrum des riesigen Römischen Reiches. Sie finden hier denn auch viele Ausgrabungen und Ruinen im Forum Romanum an und im Kolosseum machen Sie sich eine gute Vorstellung davon, wie die Gladiatoren in diesem gigantischen römischen Amphitheater kämpfen mussten. Das Pantheon, heute eine Kirche, ist mit seinem auffälligen runden offenen Dach das am besten erhaltene Gebäude der römischen Epoche. Entlang der Via Appia reisen Sie auf einer der ältesten Straßen Roms in der Zeit zurück. Tatsächlich ist die Stadt Rom ein großes Freilichtmuseum, sodass es nicht verwunderlich ist, dass das komplette alte Stadtzentrum auf der UNESCO Welterbeliste steht. </p>
+  <p class="-sm">Rom ist die Hauptstadt Italiens, die von 2,8 Millionen Einwohnern bewohnt wird: den Römern. Der Legende nach wurde Rom von dem Zwilling Remus und Romulus im Jahr 753 v. Chr. gegründet. Die Stadt am Fluss Tiber wurde auf sieben Hügeln angelegt, die Palatin, Aventin, Kapitol, Caelius, Esquilin, Quirinal und Viminal heißen. Vor allem der Bereich rund um Palatin und Kapitol entwickelten sich später zum Machtzentrum des riesigen Römischen Reiches. Sie finden hier denn auch viele Ausgrabungen und Ruinen im Forum Romanum an und im Kolosseum machen Sie sich eine gute Vorstellung davon, wie die Gladiatoren in diesem gigantischen römischen Amphitheater kämpfen mussten. Das Pantheon, heute eine Kirche, ist mit seinem auffälligen runden offenen Dach das am besten erhaltene Gebäude der römischen Epoche. Entlang der Via Appia reisen Sie auf einer der ältesten Straßen Roms in der Zeit zurück. Tatsächlich ist die Stadt Rom ein großes Freilichtmuseum, sodass es nicht verwunderlich ist, dass das komplette alte Stadtzentrum auf der UNESCO Welterbeliste steht. </p>
   </div>
 </main>
 <!--Footer-->
