--- a/rom.html
+++ b/rom.html
@@ -56,24 +56,24 @@
 <div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2" > 
   <div class="row ">
      <div class="col ">
-           <img src="img/brunnen_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+           <img src="img/brunnen_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="brunnen_rom">
              </div>
                   <div class="col ">
-                     <img src="img/engelsburg_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+                     <img src="img/engelsburg_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="engelsburg_rom">
                      </div>
                   <div class="col">
-                 <img src="img/kolosseum_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+                 <img src="img/kolosseum_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="kolosseum_rom">
               </div>
             </div>
     <div class="row">
             <div class="col g-4">
-               <img src="img/sixtinische-kapelle-rom.jpg" class="rounded float-end  " style="width: 500px; height: 450px;" alt="...">
+               <img src="img/sixtinische-kapelle-rom.jpg" class="rounded float-end  " style="width: 500px; height: 450px;" alt="sixtinische-kapelle-rom">
                     </div>
                        <div class="col g-4">
-                         <img src="img/petersdom_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+                         <img src="img/petersdom_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="petersdom_rom">
                      </div>
                   <div class="col g-4">
-              <img src="img/romanum.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="...">
+              <img src="img/romanum.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="romanum">
         </div>
     </div>
 
