--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="col-md-6">
                 <h2 class="display-4 mb-4">Von einem, der auszog<span class="text-warning"> die Welt </span> zu entdecken!</h2>
                 <p class="lead text-muted mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus corporis quas minima est, animi facilis aperiam nisi officiis veniam repudiandae accusamus iusto, impedit eius vel? Maiores incidunt officia amet maxime.</p>
-                <a href="#" class="btn btn-primary">Get Started</a>
+                <a href="rom.html" class="btn btn-primary">Get Started</a>
             </div>
             <div class="col-md-6">
                 <img src="img/Trip-cuate (1).png" class="img-fluid">
