--- a/rom.html
+++ b/rom.html
@@ -17,7 +17,7 @@
 
 <header>
 
-    <h1 class="überschrift">Städtetrip nach Rom</h1>
+ 
     <div class="sticky-top bg-light p-2 shadow" style="--bs-bg-opacity:0.95"> 
     <!--Eli Nav Leiste-->
       <nav class="navbar navbar-expand-lg navbar-light  container" >
@@ -47,7 +47,9 @@
         </nav>
 
 </header>
+
 <main>
+  <h2 class="text-center m-4 fs-1  bg-warning opacity-75">Städtetrip nach Rom</h2>
 <!--Amiemirter Balken-->
 <div class="progress">
   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
