--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
            <div class="row align-items-center">
             <div class="col-md-6">
                 <h2 class="display-4 mb-4">Von einem, der auszog<span class="text-warning"> die Welt </span> zu entdecken!</h2>
-                <p class="lead text-muted mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus corporis quas minima est, animi facilis aperiam nisi officiis veniam repudiandae accusamus iusto, impedit eius vel? Maiores incidunt officia amet maxime.</p>
+                <p class="lead text-muted mb-4">Ob Rom, die Toskana oder die Inseln Sardinien und Sizilien: Fast jeder hat seinen Lieblingsort in Italien, an den er gern zurückkehrt. Die Italiener verstehen es, ihren Gästen ein bisschen Dolce Vita mit auf den Weg zu geben, und ihre Städte verzaubern mit Architektur und Geschichte. Wir nehmen euch mit - an bereits bekannte Orte und Ecken von Italien, die ihr vielleicht noch nicht kennt.</p>
                 <a href="rom.html" class="btn btn-primary">Get Started</a>
             </div>
             <div class="col-md-6">
