--- a/Piemont.html
+++ b/Piemont.html
@@ -12,7 +12,7 @@
   </head>
 
   <header>
-    <h1 class="überschrift">Städtetrip nach Norditalien</h1>
+   
     <div class="sticky-top bg-light p-2 shadow" style="--bs-bg-opacity:0.95"> 
       <nav class="navbar navbar-expand-lg navbar-light  container" >
           <div class="container-fluid">
@@ -42,6 +42,8 @@
 
 </header>
 <body>
+  <!--H2 Überschrift mit gelben Balken-->
+  <h2 class="text-center m-4 fs-1  bg-warning opacity-75">Städtetrip nach Rom</h2>
     <div class="box">
   
     <div   class="NORDITALIEN">
