--- a/Piemont.html
+++ b/Piemont.html
@@ -43,7 +43,7 @@
 </header>
 <body>
   <!--H2 Überschrift mit gelben Balken-->
-  <h2 class="text-center m-4 fs-1  bg-warning opacity-75">Städtetrip nach Rom</h2>
+  <h2 class="text-center m-4 fs-1  bg-warning opacity-75">Städtetrip nach Norditalien</h2>
     <div class="box">
   
     <div   class="NORDITALIEN">
