--- a/rom.html
+++ b/rom.html
@@ -56,7 +56,7 @@
   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
 </div>
 <!--Bilder Rom-->
-<div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2" > 
+<div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2 mediabox" > 
   <div class="row ">
      <div class="col ">
            <img src="img/brunnen_rom.jpg" class="rounded float-end" style="width: 500px; height: 450px;" alt="brunnen_rom">
