done-text-aside

--- a/indexsham.html
+++ b/indexsham.html
@@ -18,7 +18,21 @@
     <div    class="Urlaub">
     <h1>Urlaub im Piemont: So schön ist es am Ortasee</h1>
 </div>
+<div class="aside-Sham"> <aside>
+  <p>Am Ostufer dagegen vergoldet die Sonne sanft abfallende Höhenzüge. Über weite Flächen ziehen sich saftige Wiesen und Wälder:<br>
+     uralte Edelkastanien und Buchen. Im Osten streckt sich auch Orta San Giulio auf einer Halbinsel ins Wasser. <br>
+     Beim Dorfspaziergang durch kieselgepflasterte Gassen staune ich über Rokokofassaden, geschmiedete Balkongitter – und die Stille.<br>
+      Nur die Piazza Motta lässt ahnen, wie trubelig das Dorf am Wochenende sein wird, wenn Gäste aus Mailand und Turin anrücken.<br>
 
+    Auf drei Seiten säumen in Würde gealterte Palazzi den Platz, die vierte Seite öffnet sich zum Wasser. <br>
+    Dort spielt sich wie auf einer Bühne italienischer Alltag ab:<br>
+     Alte Männer debattieren gestenreich auf Bänken im Schatten der Kastanien, Kinder spielen Fangen.<br>
+     Abends fahre ich nach Miasino, einem verschlafenen Ort oben in den Bergen, die den Ortasee vom Lago Maggiore rund 15 Kilometer östlich trennen.<br> 
+     In einer Barockvilla mit Park entdecke ich die "Taverna Antico Agnello" mit ihrer traditionel­len Küche. Marialuisa, <br>
+     die Frau des Chefs, nimmt sich Zeit zum Plaudern und erzählt, wie sehr sie die gezackten Berge mag und die stillen Dörfer am Wasser.<br>
+      "Ich liebe den Ortasee viel mehr als den Lago Maggiore", sagt sie. "Er hat auf seine bescheidene Art Persönlichkeit. Vielleicht sogar eine Seele."<br>
+    </p>
+  </aside></div>
 <div class="img-Piemont"><img src="https://image.geo.de/30136222/t/Jk/v3/w960/r0/-/ortasee-f-210673494-jpg--77406-.jpg" class="img-fluid" alt="..."></div>
 <p class="fw-lighter">In nur fünf Minuten setzt ein Boot auf die Isola di San Giulio über. 
     Dort lassen sich die prächtig ausgemalte Basilika<br> und schöne Villen bestaunen.
