--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   </nav>
                  </div>
 
-      <!-- überschrift,text und Foto  in header---->
+      <!-- überschrift,text und foto  in header---->
                      <div class="py-4">
                         <section class="container">
                            <div class="row align-items-center">
@@ -99,4 +99,3 @@
 
       </body>
    </html>
- add <div class=""></div>
