--- a/rom.html
+++ b/rom.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet"> 
     <title>Reiseführer</title>
   </head>
-  
+  <body>
 
 <header>
 
@@ -48,25 +48,29 @@
 
 </header>
 
-<body>
-
-<main>
-  
 <!--H2 Überschrift mit gelben Balken-->
   <h2 class="text-center m-4 fs-1  bg-warning opacity-75">Städtetrip nach Rom</h2>
 <!--Amiemirter Balken-->
 <div class="progress">
   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
-</div><br>
+</div>
 <!--Bilder Rom-->
-
+<div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2 " > 
   
-<img src="./img/brunnen_rom.jpg" class="rounded mx-auto d-block border border-warning border border-5" alt="brunnen_rom">
-<img src="./img/engelsburg_rom.jpg" class="rounded mx-auto d-block border border-warning border border-5" alt="engelsburg_rom">
-<img src="./img/kolosseum_rom.jpg" class="rounded mx-auto d-block border border-warning border border-5" alt="brunnen_rom">
-<img src="./img/petersdom_rom.jpg" class="rounded mx-auto d-block border border-warning border border-5" alt="engelsburg_rom">
-<img src="./img/romanum.jpg" class="rounded mx-auto d-block border border-warning border border-5" alt="brunnen_rom">
-<img src="./img/sixtinische-kapelle-rom.jpg" class="rounded mx-auto d-block border border-warning border-5" alt="engelsburg_rom">
+     <div class="border border-5 border border-primary shadow p-3 mb-5 bg-body rounded">
+           <img src="img/brunnen_rom.jpg" alt="brunnen_rom"></div>
+     <div class="border border-5 border border-warning shadow p-3 mb-5 bg-body rounded">      
+           <img src="img/engelsburg_rom.jpg" alt="engelsburg_rom"></div>
+     <div class="border border-5 border border-warning shadow p-3 mb-5 bg-body rounded">
+           <img src="img/kolosseum_rom.jpg" alt="kolosseum_rom"></div>
+     <div class="border border-5 border border-primary shadow p-3 mb-5 bg-body rounded">
+           <img src="img/sixtinische-kapelle-rom.jpg" alt="sixtinische-kapelle-rom"></div>
+     <div class="border border-5 border border-primary shadow p-3 mb-5 bg-body rounded">      
+           <img src="img/petersdom_rom.jpg" alt="petersdom_rom"></div>
+     <div class="border border-5 border border-warning shadow p-3 mb-5 bg-body rounded">    
+           <img src="img/romanum.jpg" alt="romanum"></div> 
+        </div>
+    </div>
 
 <!--Container mit Schrift-->
 <div class="container-fluid">
