--- a/rom.html
+++ b/rom.html
@@ -57,18 +57,38 @@
 <!--Bilder Rom-->
 <div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2 " > 
   
+  
+  
+  <div class="bild1"><button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Der Trevi-Brunnen, italienisch Fontana di Trevi, ist der populärste und mit rund 26 Meter Höhe und rund 50 Meter Breite größte Brunnen Roms.">
+    Trevi-Brunnen
+  </button>
      <div class="border border-5 border border-primary shadow p-3 mb-5 bg-body rounded">
-           <img src="img/brunnen_rom.jpg" alt="brunnen_rom"></div>
+           <img src="img/brunnen_rom.jpg" alt="brunnen_rom"></div></div>
+  <div class="bild1"><button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Die Engelsburg in Rom wurde ursprünglich als Mausoleum für den römischen Kaiser Hadrian und seine Nachfolger errichtet und später von verschiedenen Päpsten zur Kastellburg umgebaut.">
+    Engelsburg
+  </button>         
      <div class="border border-5 border border-warning shadow p-3 mb-5 bg-body rounded">      
-           <img src="img/engelsburg_rom.jpg" alt="engelsburg_rom"></div>
+           <img src="img/engelsburg_rom.jpg" alt="engelsburg_rom"></div></div>
+  <div class="bild1"><button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Das Kolosseum ist seit 80 n. Chr. Ein Symbol Roms und heute ein Top-Denkmal in Italien. Rund 50.000 Zuschauer versammelten sich einst in den gestuften Sitzen des Amphitheaters, um Gladiatorenspiele zu sehen,">
+    Kolosseum
+  </button>
      <div class="border border-5 border border-warning shadow p-3 mb-5 bg-body rounded">
-           <img src="img/kolosseum_rom.jpg" alt="kolosseum_rom"></div>
+           <img src="img/kolosseum_rom.jpg" alt="kolosseum_rom"></div></div>
+  <div class="bild1"><button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Die Sixtinische Kapelle ist eine Kapelle im päpstlichen Palast im Vatikan, der offiziellen Residenz des Papstes. Ursprünglich fungierte sie als Kapelle der Vatikanischen Festung und wurde Große Kapelle genannt.">
+    Sixtinische-kapelle
+  </button>        
      <div class="border border-5 border border-primary shadow p-3 mb-5 bg-body rounded">
-           <img src="img/sixtinische-kapelle-rom.jpg" alt="sixtinische-kapelle-rom"></div>
+           <img src="img/sixtinische-kapelle-rom.jpg" alt="sixtinische-kapelle-rom"></div></div>
+  <div class="bild1"><button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Die Basilika Sankt Peter im Vatikan in Rom, im deutschsprachigen Raum wegen ihrer Größe und Bedeutung gemeinhin meist Petersdom genannt, ist die Memorialkirche des Apostels Simon Petrus.">
+    Petersdom
+  </button>         
      <div class="border border-5 border border-primary shadow p-3 mb-5 bg-body rounded">      
-           <img src="img/petersdom_rom.jpg" alt="petersdom_rom"></div>
+           <img src="img/petersdom_rom.jpg" alt="petersdom_rom"></div></div>
+  <div class="bild1"><button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Das Forum Romanum in Rom ist das älteste römische Forum und war Mittelpunkt des politischen, wirtschaftlichen, kulturellen und religiösen Lebens.">
+    Romanum
+  </button>         
      <div class="border border-5 border border-warning shadow p-3 mb-5 bg-body rounded">    
-           <img src="img/romanum.jpg" alt="romanum"></div> 
+           <img src="img/romanum.jpg" alt="romanum"></div></div> 
         </div>
     </div>
 
