--- a/rom.html
+++ b/rom.html
@@ -54,11 +54,11 @@
 <div class="progress">
   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
 </div>
-<!--Bilder Rom-->
+<!--Bilder mit Rand für Rom-html-->
 <div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2 " > 
   
   
-  
+<!--Button mit Tooltip Oben-->
   <div class="bild1"><button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Der Trevi-Brunnen, italienisch Fontana di Trevi, ist der populärste und mit rund 26 Meter Höhe und rund 50 Meter Breite größte Brunnen Roms.">
     Trevi-Brunnen
   </button>
