--- a/indexsham.html
+++ b/indexsham.html
@@ -19,7 +19,7 @@
     <h1>Urlaub im Piemont: So schön ist es am Ortasee</h1>
 </div>
 
-<div class="img-Piemont"><img src="https://image.geo.de/30136222/t/Jk/v3/w960/r0/-/ortasee-f-210673494-jpg--77406-.jpg" class="img-fluid" alt="..."></div>
+<div class="img-Piemont"><img src="https://image.geo.de/30136222/t/Jk/v3/w960/r0/-/ortasee-f-210673494-jpg--77406-.jpg" alt="..."></div>
 <p class="fw-lighter">In nur fünf Minuten setzt ein Boot auf die Isola di San Giulio über. 
     Dort lassen sich die prächtig ausgemalte Basilika<br> und schöne Villen bestaunen.
     © Arcansél / Fotolia</p>
