--- a/Piemont.html
+++ b/Piemont.html
@@ -10,38 +10,6 @@
     
     <title>Reiseführer_Italien</title>
   </head>
-  <header>
-
- 
-    <div class="sticky-top bg-light p-2 shadow" style="--bs-bg-opacity:0.95"> 
-    <!--Eli Nav Leiste-->
-      <nav class="navbar navbar-expand-lg navbar-light  container" >
-      <div class="container-fluid">
-      <a class="navbar-brand fs-3" href="#">Reiseführer-Italien</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor03">
-      <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-      <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link text-dark" href="Piemont.html">Piemont</a>
-      </li>
-      <li class="nav-item">
-      <a class="nav-link text-dark" href="rom.html">Rom</a>
-      </li>
-      </ul>
-      <form class="d-flex">
-      <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-primary  bg-primary  text-white" type="submit">Search</button>
-      </form>
-      </div>
-      </div>
-      </nav>
-
-</header>
 <body>
     <div class="box">
   
@@ -65,7 +33,7 @@
       "Ich liebe den Ortasee viel mehr als den Lago Maggiore", sagt sie. "Er hat auf seine bescheidene Art Persönlichkeit. Vielleicht sogar eine Seele."<br>
     </p>
   </aside></div>
-<div class="img-Piemont"><img src="https://image.geo.de/30136222/t/Jk/v3/w960/r0/-/ortasee-f-210673494-jpg--77406-.jpg" class="img-fluid" alt="..."></div>
+<div><img class="img-Piemont" src="https://image.geo.de/30136222/t/Jk/v3/w960/r0/-/ortasee-f-210673494-jpg--77406-.jpg" alt="..."></div>
 <p class="fw-lighter">In nur fünf Minuten setzt ein Boot auf die Isola di San Giulio über. 
     Dort lassen sich die prächtig ausgemalte Basilika<br> und schöne Villen bestaunen.
     © Arcansél / Fotolia</p>
