--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                      <div class="collapse navbar-collapse" id="navbarColor03">
                        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                          <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
                    </li>
                  <li class="nav-item">
-                    <a class="nav-link text-dark" href="#">Piemont</a>
+                    <a class="nav-link text-dark" href="Piemont.html">Piemont</a>
                         </li>
                            <li class="nav-item">
-                          <a class="nav-link text-dark" href="#">Rom</a>
+                          <a class="nav-link text-dark" href="rom.html">Rom</a>
                        </li>
                     </ul>
                  <form class="d-flex">
@@ -63,28 +63,28 @@
            <!--Die Fotos in von der teil(schöne fotos)  -->
                      <main>
                         <h2 class="text-center m-4 fs-1  bg-warning opacity-75 eli">Schöne fotos von meiner reise nach Italian</h2>
-                          <div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2" > 
-                             <div class="row ">
-                             <div class="col ">
-                           <img src="img/italian-1.jpg" class=" bild rounded" style="width: 500px; height: 450px;" alt="...">
-                        </div>
-                    <div class="col ">
-                        <img src="img/italian-2.jpg" class=" bild rounded" style="width: 500px; height: 450px;" alt="...">
-                           </div> 
-                             <div class="col">
-                             <img src="img/italian-3.jpg" class=" bild rounded" style="width: 500px; height: 450px;" alt="...">
-                          </div>
-                        </div>
-                    <div class="row">
-                         <div class="col g-4">
-                            <img src="img/italian-4.jpg" class="bild rounded" style="width: 500px; height: 450px;" alt="...">
-                              </div>
-                              <div class="col g-4">
-                           <img src="img/italian-5.jpg" class="bild  rounded" style="width: 500px; height: 450px;" alt="...">
-                        </div>
-                    <div class="col g-4">
-                          <img src="img/italian-6.jpg" class=" bild  rounded" style="width: 500px; height: 450px;" alt="...">
-                              </div>
+                          <div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2  md-2 ms-1 ml-3  " > 
+                           <!-- <div class="row "> -->
+                             <!-- <div class="col "> -->
+                           <img src="img/italian-1.jpg" class=" bild rounded  mb-5" style="width: 500px; height: 450px;" alt="...">
+                        <!-- </div> -->
+                    <!-- <div class="col "> -->
+                        <img src="img/italian-2.jpg" class=" bild rounded  mb-5" style="width: 500px; height: 450px;" alt="...">
+                           <!-- </div>  -->
+                             <!-- <div class="col"> -->
+                             <img src="img/italian-3.jpg" class=" bild rounded  mb-5" style="width: 500px; height: 450px;" alt="...">
+                          <!-- </div> -->
+                        <!-- </div> -->
+                    <!-- <div class="row"> -->
+                         <!-- <div class="col g-4"> -->
+                            <img src="img/italian-4.jpg" class="bild rounded  mb-4" style="width: 500px; height: 450px;" alt="...">
+                              <!-- </div> -->
+                              <!-- <div class="col g-4"> -->
+                           <img src="img/italian-5.jpg" class="bild  rounded mb-4" style="width: 500px; height: 450px;" alt="...">
+                        <!-- </div> -->
+                    <!-- <div class="col g-4"> -->
+                          <img src="img/italian-6.jpg" class=" bild  rounded mb-4" style="width: 500px; height: 450px;" alt="...">
+                              <!-- </div> -->
                            </div>
                         </main>
 
