--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                      <div class="collapse navbar-collapse" id="navbarColor03">
                        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
                          <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                      <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
                    </li>
                  <li class="nav-item">
                     <a class="nav-link text-dark" href="Piemont.html">Piemont</a>
@@ -50,7 +50,7 @@
                              <div class="col-md-6">
                               <h2 class="display-4 mb-4">Von einem, der auszog<span class="text-warning "> die Welt </span> zu entdecken!</h2>
                               <p class="lead text-muted mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus corporis quas minima est, animi facilis aperiam nisi officiis veniam repudiandae accusamus iusto, impedit eius vel? Maiores incidunt officia amet maxime.</p>
-                            <a href="rom.html" class="btn btn-primary ">Get Started</a>
+                            <a href="#" class="btn btn-primary ">Get Started</a>
                           </div>
                        <div class="col-md-6">
                      <img src="img/Trip-cuate (1).png" class="img-fluid">
@@ -63,28 +63,28 @@
            <!--Die Fotos in von der teil(schöne fotos)  -->
                      <main>
                         <h2 class="text-center m-4 fs-1  bg-warning opacity-75 eli">Schöne fotos von meiner reise nach Italian</h2>
-                          <div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2" > 
-                             <div class="row ">
-                             <div class="col ">
-                           <img src="img/italian-1.jpg" class=" bild rounded" style="width: 500px; height: 450px;" alt="...">
-                        </div>
-                    <div class="col ">
-                        <img src="img/italian-2.jpg" class=" bild rounded" style="width: 500px; height: 450px;" alt="...">
-                           </div> 
-                             <div class="col">
-                             <img src="img/italian-3.jpg" class=" bild rounded" style="width: 500px; height: 450px;" alt="...">
-                          </div>
-                        </div>
-                    <div class="row">
-                         <div class="col g-4">
-                            <img src="img/italian-4.jpg" class="bild rounded" style="width: 500px; height: 450px;" alt="...">
-                              </div>
-                              <div class="col g-4">
-                           <img src="img/italian-5.jpg" class="bild  rounded" style="width: 500px; height: 450px;" alt="...">
-                        </div>
-                    <div class="col g-4">
-                          <img src="img/italian-6.jpg" class=" bild  rounded" style="width: 500px; height: 450px;" alt="...">
-                              </div>
+                          <div class="container-fluid  d-flex flex-wrap justify-content-evenly align-items-center m-2  md-2 ms-1 ml-3  " > 
+                           <!-- <div class="row "> -->
+                             <!-- <div class="col "> -->
+                           <img src="img/italian-1.jpg" class=" bild rounded  mb-5" style="width: 500px; height: 450px;" alt="...">
+                        <!-- </div> -->
+                    <!-- <div class="col "> -->
+                        <img src="img/italian-2.jpg" class=" bild rounded  mb-5" style="width: 500px; height: 450px;" alt="...">
+                           <!-- </div>  -->
+                             <!-- <div class="col"> -->
+                             <img src="img/italian-3.jpg" class=" bild rounded  mb-5" style="width: 500px; height: 450px;" alt="...">
+                          <!-- </div> -->
+                        <!-- </div> -->
+                    <!-- <div class="row"> -->
+                         <!-- <div class="col g-4"> -->
+                            <img src="img/italian-4.jpg" class="bild rounded  mb-4" style="width: 500px; height: 450px;" alt="...">
+                              <!-- </div> -->
+                              <!-- <div class="col g-4"> -->
+                           <img src="img/italian-5.jpg" class="bild  rounded mb-4" style="width: 500px; height: 450px;" alt="...">
+                        <!-- </div> -->
+                    <!-- <div class="col g-4"> -->
+                          <img src="img/italian-6.jpg" class=" bild  rounded mb-4" style="width: 500px; height: 450px;" alt="...">
+                              <!-- </div> -->
                            </div>
                         </main>
 
