--- a/Piemont.html
+++ b/Piemont.html
@@ -22,7 +22,7 @@
        <div class="collapse navbar-collapse" id="navbarColor03">
          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
            <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
+        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
      </li>
    <li class="nav-item">
       <a class="nav-link text-dark" href="Piemont.html">Piemont</a>
