--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                              <div class="col-md-6">
                               <h2 class="display-4 mb-4">Von einem, der auszog<span class="text-warning "> die Welt </span> zu entdecken!</h2>
                               <p class="lead text-muted mb-4">Sie können die Touren auf eigene Faust unternehmen oder ganz privat mit einer ausgezeichneten Gästeführerin erleben. Für die schönsten Sehenswürdigkeiten gibt es preiswert geführte Gruppentouren, die wir Ihnen ebenfalls empfehlen. Sie finden hier Insidertipps für einen Rom Urlaub und Tagesprogramme, die wir selbst so unternommen haben. Einen Urlaub in Rom kann man problemlos auf eine Woche in Rom ausdehnen und tolle Ausflüge nach Ostia Antica, zu den Villen in Tivoli und nach Castel Gandolfo und den Castelli Romani unternehmen. </p>
-                            <a href="rom.html" class="btn btn-primary ">Auf nach Italien</a>
+                            <a href="rom.html" class="btn btn-primary ">Alle Wege führen nach Rom</a>
                           </div>
                        <div class="col-md-6">
                      <img src="img/Trip-cuate (1).png" class="img-fluid">
