--- a/indexsham.html
+++ b/indexsham.html
@@ -87,4 +87,8 @@
             </div>
         </div>
 </body>
+  <!---- Footer--- -->
+  <footer class="sticky-footer "><p>&copy by  Aisha,Sham und Sprotte 2021 <a href="https://www.geo.de/reisen/reiseziele/14791-thma-italien-reisefuehrer">Die besten Tipps für Urlaub in Bella Italia! </a></p>
+  </footer> 
+
 </html>
