--- a/Piemont.html
+++ b/Piemont.html
@@ -86,5 +86,7 @@
              Felsklippen durchbrechen sattes Grün.</p></span>
             </div>
         </div>
+        <footer class="sticky-footer "><p>&copy by  Aisha,Sham und Sprotte 2021 <a href="https://www.geo.de/reisen/reiseziele/14791-thma-italien-reisefuehrer">Die besten Tipps für Urlaub in Bella Italia! </a></p>
+        </footer> 
 </body>
 </html>
